# CastleGame3D

./: .gitignore  CMakeLists.txt  GET_DEPENDENCIES.bat  GET_TENGINE.bat  README.md
Assets/cube/: cube.blend  cube.blend1
Assets/floor/: floor.blend  floor.blend1
Assets/jewel/: jewel.blend  jewel.blend1  jewel_proto.pdn
Assets/platform/: platform.blend  platform.blend1  platform_proto.pdn
Assets/switch/: switch.blend  switch.blend1  switch_green.pdn  switch_proto.pdn  switch_red.pdn
Assets/wall/: wall.blend  wall.blend1  wall_final.pdn  wall_proto.pdn
dependencies/TEngine/: .gitignore  CMakeLists.txt  README.md
dependencies/TEngine/src/: camera.c  camera.h  display.c  display.h  filehelper.c  filehelper.h  framebuffer.c  framebuffer.h  frustum.c  frustum.h  light.c  light.h  lodepng.c  lodepng.h  main.c  master.h  mesh.c  mesh.h  model.c  model.h  program.c  program.h  render.c  render.h  tengine_math.c  tengine_math.h  text.c  text.h  texture.c  texture.h  tinyobj_loader_c.h  utils.c  utils.h  vector.c  vector.h
src/: defs.c  defs.h  engine.c  engine.h  game.c  game.h  iswitch.c  iswitch.h  jewel.c  jewel.h  main.c  physics.c  physics.h  platform.c  platform.h  player.c  player.h  settings.c  settings.h  switch.c  switch.h  world.c  world.h
